add vendor prefixes

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Блог</title>
+    <link rel="shortcut icon" type="image/ico" href="images/favicon.ico" />
     <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
@@ -69,13 +70,13 @@
 <h2 class="main_header"> Блог</h2>
 
 <div class="container" id="posts">
+
   <h1>Мой Блог</h1>
-  <button class="adminRoot">Admin</button>
+  <input type="button" value="admin" class="admin">
   <div class="blog-container"></div>
   <ul class="pagination1"></ul>
   <div class="commentsBlock">
     <h1>Коментарии</h1>
-    <button class="admin" >admin</button>
     <div class="commentsOutput"></div>
     <div class="time"></div>
     <div class="name"></div>
