--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Контаткты</title>
+    <link rel="shortcut icon" type="image/ico" href="images/favicon.ico" />
     <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
@@ -71,7 +72,7 @@
 <div class="container">
   <div class="contacts">
     <div class="form">
-      <h2>Форма обратной связи</h2>
+      <h2 id="makeOrder">Форма для заказа</h2>
       <form name="MyForm" action="/mail.php " method="post" class="form-main"  onsubmit="return validate()">
         <div class="inline">
           <p>Имя*</p>
