--- a/pages/price.html
+++ b/pages/price.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Цены</title>
+    <link rel="shortcut icon" type="image/ico" href="images/favicon.ico" />
     <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
@@ -75,13 +76,7 @@
     <li><span>*</span> если Вы не найдете подходящий для Вас пакет услуг фотографа, можем сформировать тарифы под индивидуальные потребности заказчика.</li>
   </ul>
   <div class="sortAndFilter">
-    <div class="filter">
-      <div id="price-filter">
-        <p>from <input type="text" id="from"></p>
-        <p>to <input type="text" id="to"></p>
-      </div>
-      <input type="button" value="Send" id="send">
-    </div>
+
   <div class="sort">Сортировать
     <button id="price-up" > От дешевых к дорогим</button>
     <button id="price-down" > От дорогих к дешевым</button>
@@ -102,7 +97,7 @@
           <li>Консультация фотографа и помощь в создании образов</li>
           <li>Аренда фотостудии оплачивается отдельно</li>
         </ul>
-        <div class="booking"><a href="tel:+38(098)786-66-42">Заказать</a></div>
+        <div class="booking"><a href="/pages/contact.html#makeOrder">Заказать</a></div>
       </div>
     </div>
     <div  data-price="20000" data-time = '12' data-popul ="5" class="price price-vip">
@@ -117,7 +112,7 @@
           <li>Консультация фотографа и помощь в создании образов</li>
           <li>Аренда фотостудии оплачивается отдельно</li>
         </ul>
-        <div class="booking"><a href="tel:+38(098)786-66-42">Заказать</a></div>
+        <div class="booking"><a href="/pages/contact.html#makeOrder">Заказать</a></div>
       </div> 
     </div>
     <div data-price="700" data-time = '3'  data-popul ="1" class="price price-econom">
@@ -132,7 +127,7 @@
           <li>Консультация фотографа и помощь в создании образов</li>
           <li>Аренда фотостудии оплачивается отдельно</li>
         </ul>
-        <div class="booking"><a href="tel:+38(098)786-66-42">Заказать</a></div>
+        <div class="booking"><a href="/pages/contact.html#makeOrder">Заказать</a></div>
       </div>
     </div>
     <div data-price="1000" data-time = '5' data-popul ="4" class="price price-vip">
@@ -147,7 +142,7 @@
           <li>Консультация фотографа и помощь в создании образов</li>
           <li>Аренда фотостудии оплачивается отдельно</li>
         </ul>
-        <div class="booking"><a href="tel:+38(098)786-66-42">Заказать</a></div>
+        <div class="booking"><a href="/pages/contact.html#makeOrder">Заказать</a></div>
       </div> 
     </div>
     <div data-price="600" data-time = '2' data-popul ="2" class="price price-econom">
@@ -162,7 +157,7 @@
           <li>Консультация фотографа и помощь в создании образов</li>
           <li>Аренда фотостудии оплачивается отдельно</li>
         </ul>
-        <div class="booking"><a href="tel:+38(098)786-66-42">Заказать</a></div>
+        <div class="booking"><a href="/pages/contact.html#makeOrder">Заказать</a></div>
       </div>
     </div>
     <div data-price="900" data-time = '4' data-popul ="3" class="price price-vip">
@@ -177,7 +172,7 @@
           <li>Консультация фотографа и помощь в создании образов</li>
           <li>Аренда фотостудии оплачивается отдельно</li>
         </ul>
-        <div class="booking"><a href="tel:+38(098)786-66-42">Заказать</a></div>
+        <div class="booking"><a href="/pages/contact.html#makeOrder">Заказать</a></div>
       </div> 
     </div>
     <div data-price="500" data-time = '3' data-popul ="4" class="price price-econom">
@@ -192,7 +187,7 @@
           <li>Консультация фотографа и помощь в создании образов</li>
           <li>Аренда фотостудии оплачивается отдельно</li>
         </ul>
-        <div class="booking"><a href="tel:+38(098)786-66-42">Заказать</a></div>
+        <div class="booking"><a href="/pages/contact.html#makeOrder">Заказать</a></div>
       </div>
     </div>
     <div data-price="700" data-time = '4' data-popul ="1" class="price price-vip">
@@ -207,7 +202,7 @@
           <li>Консультация фотографа и помощь в создании образов</li>
           <li>Аренда фотостудии оплачивается отдельно</li>
         </ul>
-        <div class="booking"><a href="tel:+38(098)786-66-42">Заказать</a></div>
+        <div class="booking"><a href="/pages/contact.html#makeOrder">Заказать</a></div>
       </div> 
     </div>
     <div data-price="2000" data-time = '5' data-popul ="0" class="price price-econom">
@@ -220,7 +215,7 @@
           <li>Количество сделанных фото:50-55шт.</li>
           <li>Индивидуальный подход к каждому</li>
         </ul>
-        <div class="booking"><a href="tel:+38(098)786-66-42">Записаться</a></div>
+        <div class="booking"><a href="/pages/contact.html#makeOrder">Заказать</a></div>
       </div>
     </div>
     <div data-price="10000" data-time = '6' data-popul ="1" class="price price-econom">
@@ -235,7 +230,7 @@
           <li class="hidden-price">Консультация фотографа и помощь в создании образов</li>
           <li class="hidden-price"> Аренда фотостудии оплачивается отдельно</li>
         </ul>
-        <div class="booking"><a href="tel:+38(098)786-66-42">Заказать</a></div>
+        <div class="booking"><a href="/pages/contact.html#makeOrder">Заказать</a></div>
       </div>
     </div>
     <div data-price="1500" data-time = '5' data-popul ="5" class="price price-vip">
@@ -250,7 +245,7 @@
           <li>Консультация фотографа и помощь в создании образов</li>
           <li>Аренда фотостудии оплачивается отдельно</li>
         </ul>
-        <div class="booking"><a href="tel:+38(098)786-66-42">Заказать</a></div>
+        <div class="booking"><a href="/pages/contact.html#makeOrder">Заказать</a></div>
       </div> 
     </div>
     <div data-price="1000" data-time = '3' data-popul ="3" class="price price-vip">
@@ -265,7 +260,7 @@
           <li>Консультация фотографа и помощь в создании образов</li>
           <li>Аренда фотостудии оплачивается отдельно</li>
         </ul>
-        <div class="booking"><a href="tel:+38(098)786-66-42">Заказать</a></div>
+        <div class="booking"><a href="/pages/contact.html#makeOrder">Заказать</a></div>
       </div> 
     </div> 
   </div>
