--- a/pages/service-love.html
+++ b/pages/service-love.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Love story фотосессия</title>
+    <link rel="shortcut icon" type="image/ico" href="images/favicon.ico" />
     <link rel="stylesheet" href="/styles/main.css">
 
 </head>
@@ -112,7 +113,7 @@
             <li>Консультация фотографа и помощь в создании образов</li>
             <li>Аренда фотостудии оплачивается отдельно</li>
           </ul>
-          <div class="booking"><a href="tel:+38(098)786-66-42">Заказать</a></div>
+          <div class="booking"><a href="/pages/contact.html#makeOrder">Заказать</a></div>
         </div>
       </div>
       <div class="price price-vip">
@@ -127,7 +128,7 @@
             <li>Консультация фотографа и помощь в создании образов</li>
             <li>Аренда фотостудии оплачивается отдельно</li>
           </ul>
-          <div class="booking"><a href="tel:+38(098)786-66-42">Заказать</a></div>
+          <div class="booking"><a href="/pages/contact.html#makeOrder">Заказать</a></div>
         </div> 
       </div>
     </div>
