--- a/pages/service-master.html
+++ b/pages/service-master.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Мастер класс</title>
+    <link rel="shortcut icon" type="image/ico" href="images/favicon.ico" />
     <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
@@ -106,7 +107,7 @@
             <li>Количество сделанных фото:50-55шт.</li>
             <li>Индивидуальный подход к каждому</li>
           </ul>
-          <div class="booking"><a href="tel:+38(098)786-66-42">Записаться</a></div>
+          <div class="booking"><a href="/pages/contact.html#makeOrder">Заказать</a></div>
         </div>
       </div>
     </div>
