--- a/pages/service.html
+++ b/pages/service.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Услуги</title>
+    <link rel="shortcut icon" type="image/ico" href="images/favicon.ico" />
     <link rel="stylesheet" href="/styles/main.css">
 
 
@@ -87,7 +88,7 @@
 
                 </div>
                 <div class="service-button">
-                    <a href="service-wedding.html">Заказать</a> 
+                    <a href="service-wedding.html">Подробнее</a> 
                 </div>
             </div>
             </div>
@@ -109,7 +110,7 @@
                         <p>Новый год — яркий, красочный, феерический праздник. Его с нетерпением ждут дети и взрослые.Не удивительно, что в памяти хочется оставить воспоминания об этом удивительном времени. Поможет в этом новогодняя фотосессия. </p>
                     </div>
                     <div class="service-button">
-                    <a href="service-newyear.html">Заказать</a> 
+                    <a href="service-newyear.html">Подробнее</a> 
                     </div>
                 </div>
             </div>
@@ -126,7 +127,7 @@
                     <p>Новый год — яркий, красочный, феерический праздник. Его с нетерпением ждут дети и взрослые.Не удивительно, что в памяти хочется оставить воспоминания об этом удивительном времени. Поможет в этом новогодняя фотосессия. </p>
                 </div>
                 <div class="service-button">
-                   <a href="service-newyear.html">Заказать</a> 
+                   <a href="service-newyear.html">Подробнее</a> 
 
                 </div>
             </div>
@@ -150,7 +151,7 @@
                     </p>
                 </div>
                 <div class="service-button">
-                    <a href="service-family.html"> Заказать</a> 
+                    <a href="service-family.html"> Подробнее</a> 
                 </div>
             </div>
             </div>  
@@ -170,7 +171,7 @@
                         <p>Красивую и неповторимую историю любви поможет сохранить на долгие годы креативная фотосессия лав стори в Киеве. Нет ничего прекраснее, чем взгляды по-настоящему любящих людей. Запечатлеть свои отношения, эмоции и искренние чувства им позволит фотосессия в стиле лав стори.</p>
                     </div>
                     <div class="service-button">
-                        <a href="service-love.html"> Заказать</a> 
+                        <a href="service-love.html"> Подробнее</a> 
                     </div>
                 </div>
             </div>
@@ -187,7 +188,7 @@
                     <p>Красивую и неповторимую историю любви поможет сохранить на долгие годы креативная фотосессия лав стори в Киеве. Нет ничего прекраснее, чем взгляды по-настоящему любящих людей.</p>
                 </div>
                 <div class="service-button">
-                    <a href="service-love.html"> Заказать</a> 
+                    <a href="service-love.html"> Подробнее</a> 
                 </div>
             </div>
         </div>
@@ -209,7 +210,7 @@
                     </p>
                 </div>
                 <div class="service-button">
-                    <a href="service-master.html">Заказать</a> 
+                    <a href="service-master.html">Подробнее</a> 
                 </div>
             </div>
             </div>  
