--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Портфолио</title>
+    <link rel="shortcut icon" type="image/ico" href="images/favicon.ico" />
     <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>  
