fix some mistakes

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Блог</title>
-    <link rel="shortcut icon" type="image/ico" href="images/favicon.ico" />
+    <link rel="shortcut icon" type="image/ico" href="/images/favicon.ico" />
     <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
@@ -90,7 +90,7 @@
         </div>
         <div class="block-body">
           <label for="comment-body">Комментарий:</label>
-          <textarea   class="comment-body" id="comment-body" placeholder="comment" required ></textarea><span class="falseBody"></span>
+          <textarea   class="comment-body" id="comment-body" placeholder="comment"  required ></textarea><span class="falseBody"></span>
         </div>
         <div class="block-add">
           <button type="submit" class="comment-add" >Опубликовать</button>
